<resources>
    <string name="app_name">BMI</string>
    <string name="bmi_text">BMI</string>

    <string name="welcome_text">Welcome, calculate your first BMI!</string>
    <string name="about_title_text">What is BMI?</string>
    <string name="about_text">The body mass index (BMI) is a mathematical ratio that associates the mass (weight) and height of an individual, devised by the Belgian statesman Adolphe Quetelet, which is why it is also known as the Quetelet index.</string>
    <string name="about_btn">Do not show</string>

    <string name="name_text">Name:</string>
    <string name="input_name">Enter your name</string>
    <string name="height_text">Height (cm):</string>
    <string name="input_height">Enter your height</string>
    <string name="weight_text">Weight (kg):</string>
    <string name="input_weight">Enter your weight</string>
    <string name="calculate">Calculate</string>

    <string name="result_text">Result</string>
    <string name="result">Result</string>
    <string name="calculate_again">Calculate new BMI</string>
    <string name="reset">Reset all BMI data</string>

    <string name="category_text">Category</string>
    <string name="bmi_range_text">BMI range</string>
    <string name="underweight_text">Underweight</string>
    <string name="underweight_range_text">&lt; 18.5</string>'
    <string name="normal_text">Normal</string>
    <string name="normal_range_text">18.5 &#8211; 24.9</string>
    <string name="overweight_text">Overweight</string>
    <string name="overweight_range_text">25 &#8211; 29.9</string>
    <string name="obese_text">Obese</string>
    <string name="obese_range_text">&gt; 30</string>
</resources>