<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#118CE4"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/headerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bmi_text"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_centerInParent="true"
            android:gravity="center" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/welcomeContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/header">

        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_text"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/aboutContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcomeContainer"
        android:padding="10dp"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/welcomeContainer">

        <TextView
            android:id="@+id/aboutTitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_title_text"
            android:textAlignment="viewStart"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/aboutText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/aboutTitleText"
            android:layout_marginTop="10dp"
            android:text="@string/about_text"
            android:textAlignment="viewStart"
            android:textSize="12sp" />

        <Button
            android:id="@+id/aboutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/aboutText"
            android:layout_marginTop="10dp"
            android:background="#118CE4"
            android:text="@string/about_btn"
            android:textColor="#FFFFFF"
            tools:ignore="VisualLintButtonSize,TextContrastCheck" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/formContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/aboutContainer">

        <TextView
            android:id="@+id/nameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_text"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/nameLabel"
            android:autofillHints=""
            android:hint="@string/input_name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/heightLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/nameEditText"
            android:layout_marginTop="10dp"
            android:text="@string/height_text"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/heightEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/heightLabel"
            android:autofillHints=""
            android:hint="@string/input_height"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/weightLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/heightEditText"
            android:layout_marginTop="10dp"
            android:text="@string/weight_text"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/weightEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/weightLabel"
            android:autofillHints=""
            android:hint="@string/input_weight"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/calculateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/weightEditText"
            android:layout_marginTop="10dp"
            android:background="#118CE4"
            android:text="@string/calculate"
            android:textColor="#FFFFFF"
            tools:ignore="VisualLintButtonSize,TextContrastCheck" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/resultContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/formContainer"
        android:padding="10dp"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/formContainer">

        <TextView
            android:id="@+id/resultLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/result_text"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/resultTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/resultLabel"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:hint="@string/result"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck,TextViewEdits" />

    </RelativeLayout>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        app:layout_constraintTop_toBottomOf="@+id/resultContainer"
        tools:layout_editor_absoluteX="1dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="1dp">

            <TextView
                android:id="@+id/categoryLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/category_text"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/bmiRangeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:text="@string/bmi_range_text"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/underweightLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/underweight_text"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/underweightRangeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:text="@string/underweight_range_text"
                android:textAlignment="center"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/normalLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/normal_text"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/normalRangeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:text="@string/normal_range_text"
                android:textAlignment="center"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/overweightLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/overweight_text"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/overweightRangeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:text="@string/overweight_range_text"
                android:textAlignment="center"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/obeseLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/obese_text"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/obeseRangeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:text="@string/obese_range_text"
                android:textAlignment="center"
                android:textSize="16sp" />
        </TableRow>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
    